@startuml Change Password
skinparam classAttributeIconSize 0

package "API" {
    class AuthController {
        +ChangePassword(command: ChangePasswordCommand): Task<IActionResult>
    }
}

package "Application" {
    class ChangePasswordCommand {
        +CurrentPassword: string
        +NewPassword: string
    }

    class ChangePasswordCommandHandler {
        -identityService: IIdentityService
        +Handle(request: ChangePasswordCommand): Task<ErrorOr<Success>>
    }

    interface IIdentityService {
        +ChangePassword(request: ChangePasswordRequest): Task<ErrorOr<Success>>
    }
}

package "Infrastructure" {
    class IdentityService {
        -currentUser: IUser
        -userRepository: IUserRepository
        -passwordHasher: IPasswordHasher
        +ChangePassword(request: ChangePasswordRequest): Task<ErrorOr<Success>>
    }
}

package "Domain" {
    class UserEntity {
        +Id: Guid
        +Password: string
        +ChangePassword(hashedPassword: string, ...): void
    }
}

AuthController ..> ChangePasswordCommand : uses
ChangePasswordCommand ..> ChangePasswordCommandHandler : handled by
ChangePasswordCommandHandler --> IIdentityService : calls
IIdentityService <|.. IdentityService : implements
IdentityService --> UserEntity : updates
@enduml
